Horizontal scroll resolved

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(4, 96, 150);
+  width: fit-content;
 }
 
 code {
